Additional padding fixes for links on mobile

--- a/source/stylesheets/_project-links.scss
+++ b/source/stylesheets/_project-links.scss
@@ -2,7 +2,7 @@
   ul {
     display: flex;
     justify-content: center;
-    margin: 0;
+    padding: 0;
 
     @media screen and (max-width: 640px) {
       display: block;
@@ -17,6 +17,7 @@
 
     @media screen and (max-width: 640px) {
       max-width: 100%;
+      padding: 1rem 2rem;
     }
   }
 
